{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "6f80dce1-38a7-4da3-b3f7-bda7f48a7557",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "7e61297e-569a-4712-89f7-99560adcc0b0",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "0209cfa1-14c0-46a2-b3c6-fe52e631d858",
                    "expectedControlType": "",
                    "processors": "Normalize(max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "957e84be-44c2-4d5d-aefa-1b5730d74588",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d18540e1-3d64-44e3-b1e0-1eed1bb4bdc7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "37f8a2bd-f4ce-4f92-90f9-deb9c7a9b820",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ba063f41-bc1d-4cf4-b8bd-9c532767943c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3fbb97a2-c1ea-40cd-95dd-6a34e4357617",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b9ca405f-7bb5-4c2c-a1c9-58626f941ec6",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}